commenting true on posts

--- a/_config.yml
+++ b/_config.yml
@@ -8,3 +8,12 @@ paginate_path: "/blog/page:num/"
 
 markdown: rdiscount
 permalink: pretty
+
+defaults:
+  -
+    scope:
+      path: ""
+      type: "posts"
+    values:
+      comments: "true"
+    
