--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,11 @@ description: "Config file for jekyll"
 
 url: "http://localhost:4000"
 
+# url: "http://getmastered.com"
+
+gems:
+  - jekyll-sitemap
+
 paginate: 5
 paginate_path: "/blog/page:num/"
 
