--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ paginate: 5
 paginate_path: "/blog/page:num/"
 
 markdown: rdiscount
-permalink: pretty
+permalink: /:categories/:title/
 
 defaults:
   -
