--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,8 @@ gems:
 paginate: 5
 paginate_path: "/blog/page:num/"
 
-markdown: rdiscount
+# markdown: rdiscount
+markdown: kramdown
 permalink: /:categories/:title/
 
 defaults:
