--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-name: "Jekyll Configurations"
-description: "Config file for jekyll"
+name: "Get Mastered"
+description: "Mix and master your own music"
 
 url: "http://localhost:4000"
 
