changed site description

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: "Get Mastered"
-description: "Mix and master your own music"
+description: "Mastering and mix consultation"
 
 url: "http://localhost:4000"
 
