--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: "Get Mastered"
-description: "Mastering, Free Mix Feedback"
+description: "Mastering and Mix Feedback"
 
 # url: "http://localhost:4000"
 
