Facebook photo added for link sharing

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,8 @@
-name: "Get Mastered"
-description: "Mastering and Mix Feedback"
+name: "Get Mastered: Mastering and Mix Feedback from Audio Experts | Try us free"
+description: "Collaborative, human mastering from experienced audio experts. Try our pro-bono mastering, free of charge."
 
-# url: "http://localhost:4000"
+facebook_photo: /img/social-media/facebook-link-img.jpg
+
 
 url: "http://getmastered.com"
 
