--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 name: "Get Mastered: Mastering and Mix Feedback from Audio Experts | Try us free"
 description: "Collaborative, human mastering from experienced audio experts. Try our pro-bono mastering, free of charge."
 
-facebook_photo: /img/social-media/facebook-link-img.jpg
+fbphoto: /img/social-media/facebook-link-img.jpg
 
 
 url: "http://getmastered.com"
