Removed Paywhirl Payment pages

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-name: "Get Mastered: Mastering and Mix Feedback from Audio Experts | Try us free"
+name: "Get Mastered: Audio Experts"
 description: "Collaborative, human mastering from experienced audio experts. Try our pro-bono mastering, free of charge."
 
 fbphoto: getmastered.com/img/social-media/facebook-link-img.jpg
